k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-sample-api
  namespace: default
  labels:
    app: node-sample-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-sample-api
  template:
    metadata:
      labels:
        app: node-sample-api
    spec:
      containers:
        - name: node-sample-api
          image: creed93/node-sample-api:latest
          ports:
            - containerPort: 8000
              name: http
