k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-sample-api
  namespace: default
  labels:
    app: node-sample-api
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      name: http
  selector:
    app: node-sample-api
